k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: macedonia-regions
  labels:
    name: macedonia-regions
