k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: macedonia-regions
  namespace: macedonia-regions
  labels:
    app: macedonia-regions
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: macedonia-regions
